viya/split/Ingress/sas-authorization.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/session-cookie-name: sas-ingress-nginx
    nginx.ingress.kubernetes.io/session-cookie-path: /authorization/
    sas.com/component-name: sas-authorization
    sas.com/component-version: 3.31.4-20200825.1598386398688
    sas.com/kustomize-base: base
    sas.com/version: 3.31.4
  labels:
    app.kubernetes.io/name: sas-authorization
    sas.com/admin: namespace
    sas.com/deployment: sas-viya
  name: sas-authorization
  namespace: viya
spec:
  rules:
  - host: viya.gorcl.hornpolish.net
    http:
      paths:
      - backend:
          serviceName: sas-authorization
          servicePort: 80
        path: /authorization
